# DataOps-Troubleshooter

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  auditor.py  auditor_adapter.py  auditor_chat.py  auditor_prompting.py  chat.py  factory.py  planner.py  planner_adapter.py  prompting.py
app/api/: __init__.py  main.py
app/capabilities/: __init__.py  base.py  history.py  registry.py  reporting.py  troubleshooting.py
app/core/: __init__.py  fixture_registry.py  settings.py
app/domain/: __init__.py  models.py  planner.py  scenarios.py  tooling.py
app/evaluation/: __init__.py  __main__.py  golden_diagnosis.py  live_golden.py  portfolio.py
app/mcp/: __init__.py  client.py  executor.py  observation.py
app/memory/: __init__.py  checkpoint.py  evaluation.py  graph_registration.py  matcher.py  models.py  repository.py  runtime.py  service.py
app/observability/: __init__.py  model_calls.py
app/orchestration/: __init__.py  auditor_evaluation.py  diagnosis_models.py  diagnosis_runtime.py  diagnosis_worker.py  diagnosis_workflow.py  history_evaluation.py  models.py  react_loop.py  report_models.py  report_workflow.py  run_models.py  state.py
app/persistence/: __init__.py  database.py  models.py  run_repository.py  seed.py
app/reporting/: __init__.py  draft.py  evidence.py  policy.py  revision.py
app/retrieval/: __init__.py  ablation.py  budget.py  embeddings.py  models.py  repository.py  seeds.py  service.py
data/evals/: auditor_impact_cases.json  graphrag_ablation_cases.json  history_impact_cases.json  memory_recall_cases.json  portfolio_eval_manifest.json
data/fixtures/: golden_cases.json
data/knowledge/: cross_chain_graph.json
docs/: DataOps_Troubleshooter_产品设计文档_v2.0.docx  auditor-impact-eval-results.md  frontend-design.md  golden-diagnosis-eval-results.md  graphrag-ablation-results.md  history-impact-eval-results.md  implementation-guide.md  live-golden-eval-results.md  memory-recall-eval-results.md  portfolio-eval-results.md  product-design.md  prompt-contracts.md  reference-adoption.md
mcp_server/: __init__.py  repository.py  server.py
mcp_server/tools/: __init__.py  bds.py  flashsync.py  lts.py
tests/integration/: test_auditor_impact_langgraph.py  test_case_memory_postgres.py  test_demo_frontend.py  test_diagnosis_api.py  test_diagnosis_memory_postgres.py  test_diagnosis_resources_postgres.py  test_golden_diagnosis_evaluation.py  test_graph_postgres.py  test_health.py  test_history_impact_langgraph.py  test_mcp_protocol.py  test_memory_api.py  test_memory_recall_evaluation_postgres.py  test_openai_compatible_auditor.py  test_openai_compatible_planner.py  test_portfolio_evaluation_cli.py  test_react_loop_mcp.py
tests/unit/: test_auditor_adapter.py  test_auditor_impact_evaluation.py  test_auditor_prompting.py  test_capabilities.py  test_case_graph_registration.py  test_case_memory_retrieval_merge.py  test_case_memory_service.py  test_diagnosis_resources.py  test_diagnosis_workflow.py  test_documentation_policy.py  test_domain_models.py  test_embeddings.py  test_evidence_budget.py  test_fixture_registry.py  test_graph_ablation.py  test_history_impact_evaluation.py  test_history_matcher.py  test_knowledge_seed.py  test_live_golden_evaluation.py  test_mcp_repository.py  test_memory_recall_evaluation.py  test_model_call_observability.py  test_observation.py  test_planner_adapter.py  test_planner_contract.py  test_planner_factory.py  test_planner_prompting.py  test_portfolio_evaluation.py  test_react_loop.py  test_report_workflow.py  (+4 more)
(+42 files in other folders)
