[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-troubleshooter"
version = "0.1.0"
description = "Evidence-driven troubleshooting agent for synthetic DataOps scenarios."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "mcp>=1.28,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pywin32>=310; sys_platform == 'win32'",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pip-tools>=7.5,<8",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
