[build-system]
# setuptools builds both app/ and mcp_server/ into one educational demo wheel.
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-troubleshooter"
version = "0.1.0"
description = "Evidence-driven troubleshooting agent for synthetic DataOps scenarios."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Database and migration stack. Only asyncpg is used for PostgreSQL I/O.
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  # LangGraph provides the explicit Planner -> Action -> Observation state machine.
  "langgraph>=1.2,<2",
  # Official MCP SDK provides the real stdio protocol boundary used by tests.
  "mcp>=1.28,<2",
  # Official async SDK supplies the OpenAI-compatible structured Chat boundary.
  "openai>=2.45,<3",
  "pgvector>=0.4,<1",
  # Pydantic validates every external boundary before data reaches workflow code.
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pywin32>=310; sys_platform == 'win32'",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
# Development dependencies are isolated from the runtime container lock.
dev = [
  "httpx>=0.28,<1",
  "pip-tools>=7.5,<8",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[tool.pytest.ini_options]
# PostgreSQL integration tests are explicit because they require Docker. The
# fast suite remains runnable in an interview environment without infrastructure.
addopts = "-ra -m 'not postgres'"
testpaths = ["tests"]
markers = [
  "postgres: requires a running PostgreSQL/pgvector integration database",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
